feature: implementing functionality of instance error saving and error type getting
